--- a/README
+++ b/README
@@ -34,7 +34,7 @@
 
 🏷️ 用户收益的具体方式 用户通过日常签到、参与推广、搭建物理节点等方式参与平台建设，获得服务费用和代币奖励。
 
-📜 合规性与合法性 Uto DePIN网络严格遵守法律法规，采取用户身份验证（KYC）、反洗钱（AML）措施、数据保护等合规措施。
+📜 合规性与合法性 Uto OS (DAO)网络严格遵守法律法规，采取用户身份验证（KYC）、反洗钱（AML）措施、数据保护等合规措施。
 
 🔍 透明化的数据治理 所有数据交互在区块链上进行，确保数据的不可篡改性和透明性，增强用户信任。
 
