--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 🚀 加入Uto OS (DAO)，开启财富新纪元！ 加入我们，共同探索一个透明、公平、可持续发展的财富增长平台。
 
-🛡️ 反对不公平交易行为 Uto DePIN网络坚决抵制任何形式的不公平交易行为，包括但不限于损害用户利益的“割韭菜”行为。
+🛡️ 反对不公平交易行为 Uto OS (DAO)网络坚决抵制任何形式的不公平交易行为，包括但不限于损害用户利益的“割韭菜”行为。
 
 🏅 贡献者的激励与奖励 我们鼓励用户积极参与社区治理，提供代币奖励和社区表彰，以激励用户的贡献。
 
